syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

package user; // 包名

// 定义一个打招呼服务
service User {
  // SayHello 方法
  rpc GetUserInfo (UserReq) returns (UserInfo) {}
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string phone = 3;
}


message UserReq {
  int64 id = 1;
}
